Bug 153972 - Calc Autofilter can't select background colour when all cells in the filtered column have no content
Summary: Calc Autofilter can't select background colour when all cells in the filtered...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.5.1 release
Hardware: All Windows (All)
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords:
Depends on:
Blocks: AutoFilter-Color
  Show dependency treegraph
 
Reported: 2023-03-04 19:26 UTC by lol
Modified: 2023-12-09 09:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Autofilter can't choose background colour (10.25 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-03-04 19:26 UTC, lol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lol 2023-03-04 19:26:34 UTC
Created attachment 185755 [details]
Autofilter can't choose background colour

If you want to filter cells with the autofilter, you can't choose background colour if the cells has no content.

1. Open attached file.
Description of the columns:
Column a: All cells has no content.
Column b: One cell of each background colour has content.
Column c: All cells of each background colour has context.

2. Click in column a the autofilter and try to choose background colour, this is no possible.
3. Click in column b the autofilter and choose any background colour, this is possible. If the cells are filtered, all cells with the selected background are shown.
4. Click in column c the autofilter and choose any background colour, this is possible. If the cells are filtered, all cells with the selected background are shown. Works as in column b.

It is not possible to filter by a background color unless at least one cell has a content.

Occurs in

Version: 7.4.5.1 (x86) / LibreOffice Community
Build ID: 9c0871452b3918c1019dde9bfac75448afc4b57f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1309e6332d7ff2bd1f9b6bf87385b8b570e59158
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL threaded
Comment 1 m_a_riosv 2023-03-06 00:53:03 UTC
Reproducible
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 687b950702c49c90cff9a43655ea97a0343799a0
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

Please review the title, don't sound too accurate for me.
Comment 2 lol 2023-03-06 19:15:12 UTC
I thought long and hard about how I should summarise this briefly. Does this sound better?

Calc autofilter can't select background colour when target cells has no content
Comment 3 m_a_riosv 2023-03-08 00:56:58 UTC
Maybe:
Calc Autofilter can't select background colour when all cells in the filtered column have no content.
Comment 4 lol 2023-03-08 11:47:03 UTC
Now we have it :) Thank you for our input.
Comment 5 lol 2023-03-08 11:52:01 UTC
Typo.

Thank you for your input.
Comment 6 Commit Notification 2023-06-01 11:05:38 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e2993e1a7a61d69717b3fcf93ffa52fa0f26ba9

tdf#153972 Fix color filter when cells have no content

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2023-06-01 17:59:30 UTC
Thanks, Samuel, for fixing this, and lol for reporting.
Working well in
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: d7d2b172065f90aa2f61c0216f3722e868ae76a1
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Not working in (for reference)
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: ad085990b8073a122ac5222e5220f8f1d6826dcf
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2023-06-02 10:37:13 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1aa089472457f0d6b67abb4637a5803b73682028

tdf#153972 Fix color filter when cells have no content

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-05 14:53:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bdad6055eb32fa6e7ee9e43cf1a54edbd2318fcd

tdf#153972: sc: Add UItest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 lol 2023-06-09 14:42:09 UTC
Thanks for fixing this!

Working also well in

Version: 7.5.5.0.0+ (X86_64) / LibreOffice Community
Build ID: 9472871b192da98780d701e3bb29fce1bbc44c23
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded