tdf#153972 Fix color filter when cells have no content

Change-Id: I9742fc0627c2311bfe4c067961e0feea476f1899
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151096
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152493
(cherry picked from commit 1aa089472457f0d6b67abb4637a5803b73682028)